@@ -4,21 +4,24 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import stanl_2.weshareyou.domain.member.aggregate.entity.Member;
+
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-public class CustomUserDetails implements UserDetails {
-
+public class MemberDetails implements UserDetails {
     private final Member member;
 
-
-    public CustomUserDetails(Member member) {
+    public MemberDetails(Member member) {
         this.member = member;
+    }
+
+    public Member getMember() {
+        return member;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + member.getRole().name()));
+        return Collections.singletonList(new SimpleGrantedAuthority(member.getRole().name()));
     }
 
     @Override
@@ -49,9 +52,5 @@ public class CustomUserDetails implements UserDetails {
     @Override
     public boolean isEnabled() {
         return member.getActive();
-    }
-
-    public Member getMember() {
-        return member;
     }
 }
